--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,15 +41,19 @@ a{
  }
 .card{
    height: 170px;
-    margin-left: 20px;
+    margin-left: 4%;
+    margin-bottom: 4%;
     list-style: none;
     text-overflow: ellipsis;
-    width: 25%;
+    width: 20%;
     text-align: center;
     cursor: pointer;
+    border: 2px solid black;
 }
-.form-check-input m-l-5{
-    margin-left: 20px;
+.card_check{
+
+    margin-left: 7%;
+    margin-top: 5%;
 }
 footer{
     color: blue;
