--- a/scc/style.css
+++ b/scc/style.css
@@ -1,5 +1,4 @@
 
-
 html,body{
     height: 100%;
 }
@@ -12,8 +11,14 @@ main{
     flex: 1 1 auto;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
+header{
+
+}
+
 .header{
+
     height: 5em;
     display: flex;
     flex-wrap: wrap;
@@ -23,9 +28,12 @@ main{
 }
 a{
     text-decoration: none;
+    height: 5%;
+    margin-top: 8%;
+
 }
-.nav{
-    display: flex;
+nav{
+
     width: 20%;
     justify-content: space-between;
 }
@@ -37,10 +45,11 @@ a{
     transition-duration: 3s;
 }
 .container_btn:hover{
-     background-color: blue;
- }
+    background-color: blue;
+}
 .card{
-   height: 170px;
+
+    height: 170px;
     margin-left: 4%;
     margin-bottom: 4%;
     list-style: none;
@@ -50,7 +59,8 @@ a{
     cursor: pointer;
     border: 2px solid black;
 }
-.card_check{
+
+.delete-checkbox{
 
     margin-left: 7%;
     margin-top: 5%;
