--- a/scc/style.css
+++ b/scc/style.css
@@ -7,16 +7,6 @@ html,body{
     display: flex;
     flex-direction: column;
 }
-main{
-    flex: 1 1 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-header{
-
-}
-
 .header{
 
     height: 5em;
@@ -33,23 +23,17 @@ a{
 
 }
 nav{
-
     width: 20%;
     justify-content: space-between;
 }
-.container_btn{
-    display: block;
-    height: 40px;
 
-    border: 2px solid blue;
-    transition-duration: 3s;
+main{
+    flex: 1 1 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
-.container_btn:hover{
-    background-color: blue;
-}
-.card{
-
-    height: 170px;
+.mycard{
     margin-left: 4%;
     margin-bottom: 4%;
     list-style: none;
@@ -57,11 +41,13 @@ nav{
     width: 20%;
     text-align: center;
     cursor: pointer;
-    border: 2px solid black;
+    border: 2px solid #412929;
+    border-radius: 5px;
+    height: 15%;
 }
 
-.delete-checkbox{
 
+.delete-checkbox{
     margin-left: 7%;
     margin-top: 5%;
 }
@@ -75,43 +61,5 @@ footer{
 footer hr{
     width: 100%;
 }
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
 
 
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
-}
